@@ -5,7 +5,15 @@ as it is included in Scrooge's user's guide.
 4.x
 -----
 
-- Builds are now only for Java 8 and Scala 2.11. See the
+Breaking API Changes
+~~~~~~~~~~~~~~~~~~~~
+
+* scrooge-sbt-plugin: Allow scrooge to build bindings for more than one
+  language. To reflect this, `ScroogeSBT.autoImport.scroogeLanguage` has been
+  renamed to `scroogeLanguages` and is now a `SettingKey[Seq[String]]`
+  instead of a `SettingKey[String].` ``RB_ID=846198``
+
+* Builds are now only for Java 8 and Scala 2.11. See the
   `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
   for details. ``RB_ID=828898``
 
